# os

./: CMakeLists.txt  CMiles.hpp  CMilesOld.hpp  CMura.cpp  CMura.hpp  main.cpp  trash.txt  utils.hpp
lw1-convertingAutomata/: CMakeLists.txt
lw2-minimization/: CMinimizer.cpp  CMoore.cpp
lw3/: CMakeLists.txt
lw3/determination/: CMakeLists.txt  main.cpp
lw3/determination/src/Determination/: Determination.h
lw3/determination/src/Machine/: DeterministicMachine.h  Machine.h  MachineFunc.h
lw3/determination/src/Machines/: MachineFunc.h
lw3/determination/src/Machines/DeterministicMachine/: DeterministicMachine.h
lw3/determination/src/Machines/Machine/: Machine.h  MachineParser.h  MachineSaving.h
lw3/determinationWithEmpty/: main.cpp
lw3/determinationWithEmpty/src/Machines/Machine/: MachineParser.h
lw5/: CMakeLists.txt  main.cpp
lw5/src/: Buffer.h  Exp.h  F.h  Idlist.h  Listst.h  Prog.h  T.h  Terminal.h  Type.h
lw5/src/Components/: F.h  Type.h
lw6-LL/: CMakeLists.txt  main.cpp
lw6-LL/src/: Analysis.h  Rule.h  Rules.h
lw7-lexer/: CMakeLists.txt  main.cpp
lw7-lexer/src/: Args.h  Common.h  Lexer.h
lw7-lexer/src/Lexeme/: Lexeme.h  LexemeUnit.h
lw7-lexer/src/Token/: Token.h  TokenFunction.h  TokenType.h
